# ChangeLog for dev-ruby/hoe
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.1 2006/12/03 04:35:49 pclouds Exp $

*hoe-1.1.1 (03 Dec 2006)

  03 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org> +metadata.xml,
  +hoe-1.1.1.ebuild:
  Added hoe, part of #147065. Ebuild by Guillaume Benny
  <guillaume.benny@sympatico.ca>
