@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.4.1.ebuild,v 1.1 2006/12/03 04:42:30 pclouds Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/zentest-3.4.1.ebuild,v 1.2 2006/12/04 20:03:17 graaff Exp $
 
 inherit ruby gems
 
@@ -15,7 +15,7 @@ S=${WORKDIR}/${MY_P}
 # change the filename on the end, it still downloads the same file.
 SRC_URI="http://gems.rubyforge.org/gems/${MY_P}.gem"
 
-KEYWORDS="~x86"
+KEYWORDS="~amd64 ~x86"
 SLOT="0"
 IUSE=""
 
