@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rubyforge
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.1 2006/12/03 04:31:58 pclouds Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.2 2006/12/04 20:00:42 graaff Exp $
+
+  04 Dec 2006; Hans de Graaff <graaff@gentoo.org> rubyforge-0.3.0.ebuild:
+  Keyword for ~amd64.
 
 *rubyforge-0.3.0 (03 Dec 2006)
 
