@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/zentest
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.7 2006/12/03 04:42:30 pclouds Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/zentest/ChangeLog,v 1.8 2006/12/04 20:03:17 graaff Exp $
+
+  04 Dec 2006; Hans de Graaff <graaff@gentoo.org> zentest-3.4.1.ebuild:
+  Add ~amd64 keyword.
 
 *zentest-3.4.1 (03 Dec 2006)
 
