@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/hoe
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.1 2006/12/03 04:35:49 pclouds Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/hoe/ChangeLog,v 1.2 2006/12/04 20:01:21 graaff Exp $
+
+  04 Dec 2006; Hans de Graaff <graaff@gentoo.org> hoe-1.1.1.ebuild:
+  Keyword for ~amd64.
 
 *hoe-1.1.1 (03 Dec 2006)
 
